Front modal-modal

--- a/dashboard/templates/pesquisa_cargo.html
+++ b/dashboard/templates/pesquisa_cargo.html
@@ -8,37 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Pesquisa Cargos</title>
     <link rel="stylesheet" href="{% static 'assets/css/tabelas.css' %}" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <thead>    
         <tr>
             <th>Id</th>
             <th>Nome</th>
+            <th></th>
         </tr>
     </thead>    
     {% for cargo in page_obj %}
         <tr>
             <td>{{ cargo.id }}</td>
             <td>{{ cargo.nome_cargo }}</td>
-            <td></td>
+            <td><i class="bi bi-pencil-fill"></i><i class="bi bi-trash-fill"></i></td>
         </tr>
     {% endfor %}
-    <div class="pagination">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; primeira</a>
-                <a href="?page={{ page_obj.previous_page_number }}">anterior</a>
-            {% endif %}
-    
-            <span class="current">
-                Página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}.
-            </span>
-    
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">próxima</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">última &raquo;</a>
-            {% endif %}
-        </span>
-    </div>
 </body>
 </html>
